// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a paginated table 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -67,11 +67,11 @@
        >
          <td>
-           tanner 21
+           tanner 31
          </td>
          <td>
            linsley
@@ -101,11 +101,11 @@
        >
          <td>
-           tanner 22
+           tanner 32
          </td>
          <td>
            linsley
@@ -135,11 +135,11 @@
        >
          <td>
-           tanner 23
+           tanner 33
          </td>
          <td>
            linsley
@@ -169,11 +169,11 @@
        >
          <td>
-           tanner 24
+           tanner 34
          </td>
          <td>
            linsley
@@ -203,11 +203,11 @@
        >
          <td>
-           tanner 25
+           tanner 35
          </td>
          <td>
            linsley
@@ -237,11 +237,11 @@
        >
          <td>
-           tanner 26
+           tanner 36
          </td>
          <td>
            linsley
@@ -271,11 +271,11 @@
        >
          <td>
-           tanner 27
+           tanner 37
          </td>
          <td>
            linsley
@@ -305,11 +305,11 @@
        >
          <td>
-           tanner 28
+           tanner 38
          </td>
          <td>
            linsley
@@ -339,11 +339,11 @@
        >
          <td>
-           tanner 29
+           tanner 39
          </td>
          <td>
            linsley
@@ -373,11 +373,11 @@
        >
          <td>
-           tanner 30
+           tanner 40
          </td>
          <td>
            linsley
@@ -425,20 +425,20 @@
      </button>
      <span>
        Page 
        <strong>
-         3 of 10
+         4 of 10
        </strong>
      </span>
      <span>
        | Go to page: 
        <input
          style="width: 100px;"
          type="number"
-         value="3"
+         value="4"
        />
      </span>
      <select>
        <option
`;

exports[`renders a paginated table 2`] = `
Snapshot Diff:
- First value
+ Second value

@@ -67,11 +67,11 @@
        >
          <td>
-           tanner 31
+           tanner 41
          </td>
          <td>
            linsley
@@ -101,11 +101,11 @@
        >
          <td>
-           tanner 32
+           tanner 42
          </td>
          <td>
            linsley
@@ -135,11 +135,11 @@
        >
          <td>
-           tanner 33
+           tanner 43
          </td>
          <td>
            linsley
@@ -169,11 +169,11 @@
        >
          <td>
-           tanner 34
+           tanner 44
          </td>
          <td>
            linsley
@@ -203,11 +203,11 @@
        >
          <td>
-           tanner 35
+           tanner 45
          </td>
          <td>
            linsley
@@ -237,11 +237,11 @@
        >
          <td>
-           tanner 36
+           tanner 46
          </td>
          <td>
            linsley
@@ -271,11 +271,11 @@
        >
          <td>
-           tanner 37
+           tanner 47
          </td>
          <td>
            linsley
@@ -305,11 +305,11 @@
        >
          <td>
-           tanner 38
+           tanner 48
          </td>
          <td>
            linsley
@@ -339,11 +339,11 @@
        >
          <td>
-           tanner 39
+           tanner 49
          </td>
          <td>
            linsley
@@ -373,11 +373,11 @@
        >
          <td>
-           tanner 40
+           tanner 50
          </td>
          <td>
            linsley
@@ -425,20 +425,20 @@
      </button>
      <span>
        Page 
        <strong>
-         4 of 10
+         5 of 10
        </strong>
      </span>
      <span>
        | Go to page: 
        <input
          style="width: 100px;"
          type="number"
-         value="4"
+         value="5"
        />
      </span>
      <select>
        <option
`;

exports[`renders a paginated table 3`] = `
Snapshot Diff:
- First value
+ Second value

@@ -67,11 +67,11 @@
        >
          <td>
-           tanner 41
+           tanner 91
          </td>
          <td>
            linsley
@@ -101,11 +101,11 @@
        >
          <td>
-           tanner 42
+           tanner 92
          </td>
          <td>
            linsley
@@ -135,11 +135,11 @@
        >
          <td>
-           tanner 43
+           tanner 93
          </td>
          <td>
            linsley
@@ -169,11 +169,11 @@
        >
          <td>
-           tanner 44
+           tanner 94
          </td>
          <td>
            linsley
@@ -203,11 +203,11 @@
        >
          <td>
-           tanner 45
+           tanner 95
          </td>
          <td>
            linsley
@@ -237,11 +237,11 @@
        >
          <td>
-           tanner 46
+           tanner 96
          </td>
          <td>
            linsley
@@ -271,11 +271,11 @@
        >
          <td>
-           tanner 47
+           tanner 97
          </td>
          <td>
            linsley
@@ -305,11 +305,11 @@
        >
          <td>
-           tanner 48
+           tanner 98
          </td>
          <td>
            linsley
@@ -339,11 +339,11 @@
        >
          <td>
-           tanner 49
+           tanner 99
          </td>
          <td>
            linsley
@@ -373,11 +373,11 @@
        >
          <td>
-           tanner 50
+           tanner 100
          </td>
          <td>
            linsley
@@ -414,31 +414,35 @@
      <button>
        &lt;
      </button>
-     <button>
+     <button
+       disabled=""
+     >
        &gt;
      </button>
-     <button>
+     <button
+       disabled=""
+     >
        &gt;&gt;
      </button>
      <span>
        Page 
        <strong>
-         5 of 10
+         10 of 10
        </strong>
      </span>
      <span>
        | Go to page: 
        <input
          style="width: 100px;"
          type="number"
-         value="5"
+         value="10"
        />
      </span>
      <select>
        <option
`;
